[package]
name = "canal-router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
once_cell = "1.14.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
tokio-tun = "0.7.0"
toml = "0.5.9"

[build-dependencies]
bindgen = "0.60.1"
